feat: Implement dynamic department management using Google Sheets and update application logos.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta property="og:title" content="People Drive Manager" />
   <meta property="og:description" content="People Drive Manager" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/Gemini_Generated_Image_p5ko5pp5ko5pp5ko.png" />
-  <link rel="icon" type="image/png" href="/Gemini_Generated_Image_p5ko5pp5ko5pp5ko.png" />
+  <meta property="og:image" content="/un-logo.png" />
+  <link rel="icon" type="image/png" href="/un-logo.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="Gemini_Generated_Image_p5ko5pp5ko5pp5ko.png" />
+  <meta name="twitter:image" content="/un-logo.png" />
 </head>
 
 <body>
