--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- TODO: Set the document title to the name of your application -->
-  <title>Codekar Hackathon</title>
-  <meta name="description" content="Codekar Hackathon - Project Upload Portal" />
-  <meta name="author" content="Codekar" />
+  <title>Kodekar Hackathon</title>
+  <meta name="description" content="Kodekar Hackathon - Project Upload Portal" />
+  <meta name="author" content="Kodekar" />
 
   <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="Hackathon codekar" />
-  <meta property="og:description" content="Hackathon codekar" />
+  <meta property="og:title" content="Hackathon kodekar" />
+  <meta property="og:description" content="Hackathon kodekar" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/un-logo.png" />
   <link rel="icon" type="image/png" href="/un-logo.png" />
